--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "popper.js": "^1.16.1"
+    "@hotwired/stimulus": "^3.0.1",
+    "@hotwired/turbo-rails": "^7.1.0",
+    "@popperjs/core": "^2.11.0",
+    "bootstrap": "^5.1.3",
+    "esbuild": "^0.14.5",
+    "sass": "^1.45.0"
   },
   "devDependencies": {},
   "scripts": {
